--- a/src/webui/upload.html
+++ b/src/webui/upload.html
@@ -19,6 +19,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fileway #VERSION#</title>
+    <link rel="shortcut icon" href="/favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         #downloadUrl,
