#9 Add capability to zip multiple files and send the zip

--- a/src/webui/download.html
+++ b/src/webui/download.html
@@ -27,6 +27,8 @@
     <div class="container shadow p-4 bg-white rounded text-center mt-4" style="max-width: 450px;">
         <h2 class="mb-3">fileway download</h2>
         <hr />
+        <div class="mt-3 text-muted">#FILE_INFO#</div>
+        <div>&nbsp;</div>
         <a id="downloadLink" class="btn btn-primary w-100">Download your file</a>
     </div>
     <script>
