#11 Make the web UI serve the python uploader script

--- a/src/webui/upload.html
+++ b/src/webui/upload.html
@@ -58,6 +58,10 @@
                 <button class="btn btn-outline-secondary" onclick="copyToClipboard('curlCommand')">Copy</button>
             </div>
         </div>
+        <hr />
+        <div><em class="text-muted small">
+                <a href="/fileway_ul.py" target="_blank" class="text-decoration-none">download CLI uploader</a>
+            </em></div>
     </div>
     <script>
         async function uploadFile() {
