--- a/src/webui/download.html
+++ b/src/webui/download.html
@@ -18,18 +18,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fileway #VERSION#</title>
+    <title>Fileway</title>
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body class="d-flex justify-content-center align-items-start vh-100" style="background-color: #EFEFE0;">
     <div class="container shadow p-4 bg-white rounded text-center mt-4" style="max-width: 450px;">
-        <h2 class="mb-3">fileway download</h2>
+        <ul class="list-inline mb-3">
+            <li class="list-inline-item">
+                <h2>🚠 Fileway</h2>
+            </li>
+            <li class="list-inline-item small">#VERSION#</li>
+        </ul>
+        <hr />
+        <a id="downloadLink" class="btn btn-primary w-100">Download your file</a>
         <hr />
         <div class="mt-3 text-muted">#FILE_INFO#</div>
-        <div>&nbsp;</div>
-        <a id="downloadLink" class="btn btn-primary w-100">Download your file</a>
     </div>
     <script>
         document.getElementById('downloadLink').href = window.location.href.replace('/dl/', '/ddl/');
