--- a/src/webui/upload.html
+++ b/src/webui/upload.html
@@ -18,9 +18,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fileway #VERSION#</title>
+    <title>Fileway</title>
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         #downloadUrl,
         #curlCommand {
@@ -33,7 +33,12 @@
 
 <body class="d-flex justify-content-center align-items-start vh-100" style="background-color: #EFEFE0;">
     <div class="container shadow p-4 bg-white rounded text-center mt-4" style="max-width: 450px;">
-        <h2 class="mb-3">fileway Web UI</h2>
+        <ul class="list-inline mb-2">
+            <li class="list-inline-item">
+                <h2>🚠 Fileway</h2>
+            </li>
+            <li class="list-inline-item small">#VERSION#</li>
+        </ul>
         <hr />
         <div class="mb-2">
             <input type="password" class="form-control" id="secret" placeholder="Secret">
