--- a/src/static/upload.html
+++ b/src/static/upload.html
@@ -21,12 +21,28 @@
     <title>Fileway</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
     <style>
-        #downloadUrl,
-        #curlCommand {
+        #downloadUrl, #curlCommand {
             font-family: monospace;
             font-size: 75%;
             background-color: #F9F9FF;
+        }
+        #qrPopup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            text-align: center;
+            border-radius: 10px;
+        }
+        #qrPopup canvas {
+            max-width: 200px;
         }
     </style>
 </head>
@@ -76,12 +92,19 @@
             <label class="form-label">Download URL:</label>
             <div class="input-group mb-2">
                 <input type="text" id="downloadUrl" class="form-control" readonly>
-                <button class="btn btn-outline-secondary" onclick="copyToClipboard('downloadUrl')">Copy</button>
+                <button class="btn btn-outline-secondary" onclick="showQrCode()" title="Show QR Code">
+                    <i class="bi bi-qr-code-scan"></i>
+                </button>
+                <button class="btn btn-outline-secondary" onclick="copyToClipboard('downloadUrl')" title="Copy to Clipboard">
+                    <i class="bi bi-copy"></i>
+                </button>
             </div>
             <label class="form-label">Curl Command:</label>
             <div class="input-group">
                 <input type="text" id="curlCommand" class="form-control" readonly>
-                <button class="btn btn-outline-secondary" onclick="copyToClipboard('curlCommand')">Copy</button>
+                <button class="btn btn-outline-secondary" onclick="copyToClipboard('curlCommand')" title="Copy to Clipboard">
+                    <i class="bi bi-copy"></i>
+                </button>
             </div>
         </div>
         <hr />
@@ -89,6 +112,14 @@
                 <a href="/fileway_ul.py" target="_blank" class="text-decoration-none">download CLI uploader</a>
             </em></div>
     </div>
+    
+    <div id="qrPopup">
+        <h5>Scan QR Code</h5>
+        <canvas id="qrCanvas"></canvas>
+        <br>
+        <button class="btn btn-primary btn-sm mt-2" onclick="closeQrPopup()">Close</button>
+    </div>
+    
     <script>
         // Add event listeners for radio buttons to toggle input visibility
         document.getElementById('fileUpload').addEventListener('change', function () {
@@ -211,11 +242,25 @@
         function copyToClipboard(elementId) {
             const input = document.getElementById(elementId);
             input.select();
-            input.setSelectionRange(0, 99999);
             document.execCommand('copy');
         }
 
         document.getElementById('uploadButton').addEventListener('click', uploadFile);
+
+        function showQrCode() {
+            const url = document.getElementById('downloadUrl').value;
+            if (!url) return;
+            const qr = new QRious({
+                element: document.getElementById('qrCanvas'),
+                value: url,
+                size: 200
+            });
+            document.getElementById('qrPopup').style.display = 'block';
+        }
+
+        function closeQrPopup() {
+            document.getElementById('qrPopup').style.display = 'none';
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
